Introduce basic support for Vector API (#2890)
* Introduce basic support for Vector API

* add modules to javadoc too

* add assumption comments